--- a/info.css
+++ b/info.css
@@ -4,11 +4,12 @@
 }
 
 header {
+    position: relative;
     background-color: #343a40;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 30px;
+    height: 32px;
 }
 header h4 {
     color: whitesmoke;
@@ -21,6 +22,7 @@ main h1 {
 }
 main img{
     width: 400px;
+    height: 533px;
 }
 footer {
     height: 60px;
@@ -31,6 +33,19 @@ footer {
 }
 footer p {
     color: whitesmoke;
+}
+.src-list {
+position: absolute;
+list-style-type: none;
+padding-left: 5px;
+top: 30px;
+right: 402px;
+width: 177px;
+border: 1px solid black;
+}
+.li {
+    cursor: pointer;
+    border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .wraper {
