--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
 }
 header h4 {
     color: whitesmoke;
+    cursor: pointer;
 }
 
 main h1 {
@@ -37,6 +38,20 @@ footer {
 footer p {
     color: whitesmoke;
 }
+.src-list {
+    position: absolute;
+    list-style-type: none;
+    padding-left: 5px;
+    top: 30px;
+    right: 402px;
+    width: 177px;
+    border: 1px solid black;
+    background-color: whitesmoke;
+    }
+.li {
+        cursor: pointer;
+        border-bottom: 1px solid rgb(190, 190, 190);
+    }
 
 .cards {
     margin: auto;
